# aisp

./: .dockerignore  .gitignore  DEMO_RECORDING.md  Dockerfile  INTERVIEW_NOTES.md  MANUAL_TEST.md  PLAN.md  PROGRESS.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: _json_util.py  base.py  clause_analyzer.py  composer.py  knowledge.py  policy.py  registry.py  risk.py  router.py  ticket_decision.py  tone.py  tool_agent.py
backend/app/api/: admin.py  admin_synthesis.py  chat.py  synthesis.py  telegram_webhook.py
backend/app/db/: database.py  models.py
backend/app/km/: bm25_index.py  chunker.py  eval.py  ingest.py  pdf_loader.py  reranker.py  retriever.py  store.py
backend/app/providers/: base.py  factory.py  groq.py  mock.py
backend/app/schemas/: agent.py  chat.py  knowledge.py  workspace.py
backend/app/synthesis/: __init__.py  approval.py  code_generator.py  gap_detector.py  integration.py  judge.py  orchestrator.py  persistence.py  planner.py  registry_loader.py  review.py  schemas.py  spec_enricher.py  static_check.py  test_generator.py  tool_retriever.py
backend/app/telegram/: __init__.py  _ssl.py  bot.py  callback_router.py  notifier.py  pending.py  review.py  sender.py
backend/app/tools/: base.py  (+3 more)
backend/scripts/: debug_push_approval.py  debug_sandbox.py  reindex_chroma.py  run_eval.py
backend/tests/: _api.py  _fakes.py  smoke_ws.py  test_api_admin_synthesis.py  test_api_synthesis.py  test_api_telegram_webhook.py  test_approval_service.py  test_chat_tool_pipeline.py  test_chunker.py  test_groq_retry.py  test_integration_singletons.py  test_km.py  test_phase6_agents.py  test_phase6_tables.py  test_pipeline.py  test_provider_model_override.py  test_registry_loader.py  test_resolver.py  test_retrieval.py  test_router_parsing.py  test_sandbox_local.py  test_synthesis_code_generator.py  test_synthesis_gap_detector.py  test_synthesis_judge.py  test_synthesis_orchestrator.py  test_synthesis_planner.py  test_synthesis_review.py  test_synthesis_spec_enricher.py  test_synthesis_static_check.py  test_synthesis_test_generator.py  test_telegram_callback_router.py  test_telegram_notifier.py  test_telegram_pending.py  test_telegram_review.py  test_tool_agent.py  test_tool_discoverable.py  test_tool_registry_workspace.py  test_tool_schema.py  test_workflow_loader.py
(+51 files in other folders)
