[project]
name = "aisp-backend"
version = "0.1.0"
description = "Enterprise AI Agent Platform — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-multipart>=0.0.20",
    "truststore>=0.10",
    "chromadb>=0.5",
    "pypdf>=4.0",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2.2",
    "jieba>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.27",
]
# E2B sandbox（PROD 才需要；dev 跑 LocalSubprocessRunner 不需要）
sandbox = [
    "e2b-code-interpreter>=1.0",
]
# Telegram HITL（M3+M6 才需要；單測 fake sender 不需要）
telegram = [
    "python-telegram-bot>=21.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: FastAPI 慣用「Depends() 寫在 default」；E501: 行寬交給編輯器
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
